--- a/src/modules/veriables.scss
+++ b/src/modules/veriables.scss
@@ -2,3 +2,8 @@ $headercolor: #E7E7E2;
 $aboutColor: #FFFFFF;
 $footerColor: #0A0A0A;
 $mainBgColor: #666666;
+$animationSpeed: all 0.3s ease;
+$primaryFontFamily: 'Prompt',
+'Inter',
+Arial,
+sans-serif;
