--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -2,3 +2,5 @@
 @import url(../vendor/font.css);
 @import '../modules/veriables.scss';
 @import '../modules/mixin.scss';
+@import '../modules/blocks/page.scss';
+@import '../modules/blocks/header.scss';
