--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,3 +4,5 @@
 @import '../modules/mixin.scss';
 @import '../modules/blocks/page.scss';
 @import '../modules/blocks/header.scss';
+@import '../modules/blocks/content.scss';
+@import '../modules/blocks/about.scss';
