--- a/src/modules/blocks/about.scss
+++ b/src/modules/blocks/about.scss
@@ -7,6 +7,34 @@
     padding-left: 20px;
     padding-right: 20px;
     box-sizing: border-box;
+    &_type_invisible {
+        position: relative;
+        &::after {
+            content: '';
+            background: #fff;
+            position: absolute;
+            transition: width ease 2s;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+        }
+    }
+    &_type_visible {
+        position: relative;
+        &::after {
+            content: '';
+            background: #fff;
+            position: absolute;
+            width: 0;
+            height: 100%;
+            top: 0;
+            left: 0;
+        }
+    }
+    &_type_undercover {
+        visibility: hidden;
+    }
     &__title {
         @include reset;
         @include headlineDesctop;
@@ -14,6 +42,7 @@
     &__subtitle {
         @include reset;
         @include textDesctop;
+        animation: 3s beautyText linear;
     }
     &_type-center {
         align-self: center;
@@ -54,5 +83,14 @@
         position: relative;
         right: 213px;
         z-index: -1;
+    }
+}
+
+@keyframes beautyText {
+    from {
+        transform: scale(.8);
+    }
+    to {
+        transform: scale(1);
     }
 }
