--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -253,6 +253,40 @@
           box-sizing: border-box;
 }
 
+.about_type_invisible {
+  position: relative;
+}
+
+.about_type_invisible::after {
+  content: '';
+  background: #fff;
+  position: absolute;
+  -webkit-transition: width ease 2s;
+  transition: width ease 2s;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.about_type_visible {
+  position: relative;
+}
+
+.about_type_visible::after {
+  content: '';
+  background: #fff;
+  position: absolute;
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.about_type_undercover {
+  visibility: hidden;
+}
+
 .about__title {
   margin: 0;
   padding: 0;
@@ -275,6 +309,8 @@
   font-size: 20px;
   line-height: 32px;
   color: #0A0A0A;
+  -webkit-animation: 3s beautyText linear;
+          animation: 3s beautyText linear;
 }
 
 .about_type-center {
@@ -331,5 +367,27 @@
   position: relative;
   right: 213px;
   z-index: -1;
+}
+
+@-webkit-keyframes beautyText {
+  from {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes beautyText {
+  from {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 /*# sourceMappingURL=index.css.map */
