--- a/src/modules/blocks/about.scss
+++ b/src/modules/blocks/about.scss
@@ -47,6 +47,13 @@
     &_type-center {
         align-self: center;
     }
+    &__letter {
+        @include reset;
+        @include leadDesctop;
+    }
+    &__letter-visible {
+        opacity: 1;
+    }
     &__article {
         @include reset;
         @include leadDesctop;
@@ -58,6 +65,7 @@
         line-height: 44px;
         margin: 0;
         padding: 0;
+        min-height: 150px;
         max-width: 700px;
         align-self: center;
         width: 100%;
