--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -6,3 +6,5 @@
 @import '../modules/blocks/header.scss';
 @import '../modules/blocks/content.scss';
 @import '../modules/blocks/about.scss';
+@import '../modules/blocks/looks.scss';
+@import '../modules/blocks/footer.scss';
