--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,6 +16,14 @@
 .header {
   min-height: 900px;
   background-color: #E7E7E2;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    min-height: 646px;
+  }
 }
 
 .header__conteiner {
@@ -37,6 +45,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .header__conteiner {
+    min-height: 646px;
+  }
 }
 
 .header__nav {
@@ -112,6 +128,14 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 49%;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .header__main-theme {
+    width: 64%;
+  }
 }
 
 .header__title {
@@ -126,6 +150,21 @@
   text-transform: uppercase;
   color: #0A0A0A;
   margin-bottom: 32px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .header__title {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #0A0A0A;
+  }
 }
 
 .header__button {
