--- a/src/modules/blocks/looks.scss
+++ b/src/modules/blocks/looks.scss
@@ -9,6 +9,10 @@
     &__title {
         @include reset;
         @include headlineDesctop;
+        @include animatedTransition;
+        @media screen and (max-width: 768px) {
+            @include headlineTablet;
+        }
     }
     &__gallery {
         list-style: none;
@@ -16,6 +20,13 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         max-width: 1400px;
+        @include animatedTransition;
+        @media screen and (max-width: 768px) {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr 1fr;
+            grid-auto-rows: 0;
+            overflow-y: hidden;
+        }
     }
     &__item {
         //height: 220px;
