--- a/src/modules/blocks/footer.scss
+++ b/src/modules/blocks/footer.scss
@@ -7,6 +7,10 @@
         margin-left: auto;
         margin-right: auto;
         max-width: 700px;
+        @include animatedTransition;
+        @media screen and (max-width: 768px) {
+            max-width: 468px;
+        }
     }
     &__title {
         @include reset;
