--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -90,6 +90,15 @@
   margin: 0;
   padding: 0;
   gap: 80px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .header__list {
+    width: 334px;
+    min-height: 480px;
+  }
 }
 
 .header__nav-close-button {
@@ -290,6 +299,8 @@
   padding-right: 20px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
 }
 
 .about_type_invisible {
@@ -337,6 +348,21 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #0A0A0A;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .about__title {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #0A0A0A;
+  }
 }
 
 .about__subtitle {
@@ -348,6 +374,8 @@
   font-size: 20px;
   line-height: 32px;
   color: #0A0A0A;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
 }
 
 .about__subtitle-animated {
@@ -403,6 +431,8 @@
       align-self: center;
   width: 100%;
   position: relative;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
 }
 
 .about__article::after {
@@ -415,6 +445,12 @@
   opacity: 0;
 }
 
+@media screen and (max-width: 768px) {
+  .about__article {
+    bottom: 45px;
+  }
+}
+
 .about__article_type_visible::after {
   opacity: 1;
 }
@@ -424,10 +460,28 @@
   position: relative;
   right: 210px;
   z-index: -1;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .about__image-first {
+    right: 140px;
+  }
 }
 
 .about__image-second {
   width: 86%;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .about__image-second {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .about__image-third {
@@ -435,6 +489,20 @@
   position: relative;
   right: 213px;
   z-index: -1;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .about__image-third {
+    right: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .about {
+    grid-row-gap: 70px;
+  }
 }
 
 @-webkit-keyframes beautyText {
@@ -486,6 +554,21 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #0A0A0A;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .looks__title {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #0A0A0A;
+  }
 }
 
 .looks__gallery {
@@ -497,6 +580,19 @@
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
   max-width: 1400px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .looks__gallery {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    grid-auto-rows: 0;
+    overflow-y: hidden;
+  }
 }
 
 .looks__image {
@@ -515,6 +611,14 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 700px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__conteiner {
+    max-width: 468px;
+  }
 }
 
 .footer__title {
