--- a/src/modules/blocks/header.scss
+++ b/src/modules/blocks/header.scss
@@ -62,6 +62,10 @@
             width: 334px;
             min-height: 480px;
         }
+        @media screen and (max-width: 520px) {
+            width: 255px;
+            min-height: 325px;
+        }
     }
     &__nav-close-button {
         position: absolute;
