--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -127,6 +127,13 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+  .header__list {
+    width: 255px;
+    min-height: 325px;
+  }
+}
+
 .header__nav-close-button {
   position: absolute;
   background-image: url("../images/crest.svg");
@@ -776,6 +783,19 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .looks__title {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #0A0A0A;
+  }
+}
+
 .looks__gallery {
   list-style: none;
   margin: 0;
@@ -800,9 +820,24 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .looks__gallery {
+    grid-auto-rows: auto;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .looks__image {
   max-width: 100%;
   display: block;
+}
+
+@media screen and (max-width: 480px) {
+  .looks {
+    padding-bottom: 40px;
+    gap: 20px;
+  }
 }
 
 .footer {
@@ -826,6 +861,12 @@
   }
 }
 
+@media screen and (max-width: 490px) {
+  .footer__conteiner {
+    max-width: 280px;
+  }
+}
+
 .footer__title {
   margin: 0;
   padding: 0;
@@ -838,6 +879,20 @@
   color: #FFFFFF;
   text-align: center;
   margin-bottom: 40px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 490px) {
+  .footer__title {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #0A0A0A;
+    color: #fff;
+  }
 }
 
 .footer__form {
@@ -846,6 +901,17 @@
   display: flex;
   width: 100%;
   margin-bottom: 40px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 490px) {
+  .footer__form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .footer__email-input {
@@ -858,6 +924,14 @@
   width: calc(100% - 108px);
   padding-left: 24px;
   color: #666666;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 490px) {
+  .footer__email-input {
+    width: 100%;
+  }
 }
 
 .footer::-webkit-input-placeholder {
@@ -910,6 +984,15 @@
 
 .footer__button {
   width: 108px;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 490px) {
+  .footer__button {
+    width: 100%;
+    height: 44px;
+  }
 }
 
 .footer__label {
@@ -937,6 +1020,20 @@
   color: #FFFFFF;
   margin-top: 40px;
   text-align: center;
+  -webkit-transition: all ease .3s;
+  transition: all ease .3s;
+}
+
+@media screen and (max-width: 490px) {
+  .footer__copyright {
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #0A0A0A;
+    color: #fff;
+  }
 }
 
 .footer__switcher {
